# AUTO-Aming-system

./: .gitignore  .gitmodules  CMakeLists.txt  camera_sim.py  node.md  readme.md  tracker.sh
.github/workflows/: build-test.yml  c-cpp.yml
Modules/: CMakeLists.txt  modules.yaml  sources.yaml
User/: main.cpp  xrobot.yaml  xrobot_main.hpp
src/: main.cpp
src/armor_detector/: CMakeLists.txt
src/armor_detector/include/: armor.hpp  armor_detector.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
src/armor_detector/src/: armor_detector.cpp  detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
src/armor_executor/: CMakeLists.txt
src/armor_executor/src/: SolveTrajectory.cpp  SolveTrajectory.hpp
src/armor_tracker/include/: extended_kalman_filter.hpp  tracker.hpp  tracker_node.hpp
src/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
src/camera_base/: CMakeLists.txt
src/camera_base/src/: camera_base.hpp
src/hik_camera/: CMakeLists.txt
src/hik_camera/config/: camera_info.yaml  camera_params.yaml
src/hik_camera/launch/: hik_camera.launch.py
src/hik_camera/src/: hik_camera.cpp  hik_camera.hpp  hik_camera_node.cpp  hik_camera_node.hpp
src/rm_auto_aim/: README.md
src/rm_auto_aim/armor_detector/: CMakeLists.txt  package.xml
src/rm_auto_aim/armor_detector/include/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
src/rm_auto_aim/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
src/rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
src/rm_auto_aim/armor_detector/test/: test_node_startup.cpp  test_number_cls.cpp
src/rm_auto_aim/armor_executor/: CMakeLists.txt
src/rm_auto_aim/armor_executor/include/armor_executor/: SolveTrajectory.hpp
src/rm_auto_aim/armor_executor/src/: SolveTrajectory.cpp  SolveTrajectory.hpp  test.cpp
src/rm_auto_aim/armor_tracker/: CMakeLists.txt  package.xml
src/rm_auto_aim/armor_tracker/include/: tracker.hpp  tracker_node.hpp
src/rm_auto_aim/armor_tracker/include/armor_tracker/: tracker.hpp  tracker_node.hpp
src/rm_auto_aim/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
src/rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
src/rm_auto_aim/auto_aim_interfaces/msg/: Receive.msg  Send.msg
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_serial_driver/: CMakeLists.txt  README.md  package.xml
src/rm_serial_driver/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver.hpp
src/rm_serial_driver/src/: crc.cpp  rm_serial_driver.cpp  rm_serial_driver.hpp
src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/rm_vision/rm_vision_bringup/launch/: common.py  no_hardware.launch.py  vision_bringup.launch.py
src/ros2_hik_camera/: package.xml
src/ros2_hik_camera/config/: camera_info.yaml
src/ros2_hik_camera/src/: hik_camera_node.cpp
src/uvc_camera/: CMakeLists.txt
src/uvc_camera/src/: uvc_camera.cpp  uvc_camera.hpp  uvc_camera_node.cpp  uvc_camera_node.hpp
